--- a/experiments/ray-demo/pyproject.toml
+++ b/experiments/ray-demo/pyproject.toml
@@ -22,6 +22,7 @@ nvidia-ml-py3 = "^7.352.0"
 psutil = "^5.9.5"
 mlflow = "^2.6.0"
 tensorboardx = "^2.6.2.2"
+pmlb = "^1.0.1.post3"
 
 
 [build-system]
