--- a/experiments/experiment1/pyproject.toml
+++ b/experiments/experiment1/pyproject.toml
@@ -23,6 +23,7 @@ ray = {version = "^2.8.0", extras = ["all"]}
 async-timeout = "^4.0.3"
 tdqm = "^0.0.1"
 aim = {version = "^3.17.5", python="^3.11,<3.12"}
+matplotlib = "^3.8.2"
 
 
 [build-system]
